--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_refresh">Refresh</string>
     <string name="empty">There aren\'t any tweet.</string>
+    <string name="tweet_label">Tweet!</string>
 </resources>
